Update vision/visionary language.

--- a/src/visionlouisville/jstemplates/user-list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-item-tpl.html
@@ -8,7 +8,7 @@
     </span>
     <span class="user-meta">
       {{#if visions.length}}
-      <span class="user-count user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</span>
+      <span class="user-count user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Idea' 'Ideas'}}</span>
       {{/if}}
 
       {{#if supported.length}}
