--- a/src/visionlouisville/jstemplates/home-visionaries-tpl.html
+++ b/src/visionlouisville/jstemplates/home-visionaries-tpl.html
@@ -1,3 +1,3 @@
-  <h5>We are the Visionaries of Louisville!</h5>
+  <h5>We have ideas for a great Newark!</h5>
   <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
-  <a href="/users/list/visionaries" class="btn btn-block">See All Visionaries</a>
+  <a href="/users/list/visionaries" class="btn btn-block">See Everyone</a>
