--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -13,7 +13,7 @@
       <ul class="tabs tabs-{{get_tab_count visions.length supported.length replies.length}} unstyled-list">
 
         {{#if visions.length}}
-        <li class="tab"><a href="/users/{{id}}/visions" data-noscroll data-replace>{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/visions" data-noscroll data-replace>{{ visions.length }} {{pluralize visions.length 'Idea' 'Ideas'}}</a></li>
         {{/if}}
 
         {{#if supported.length}}
