show/hide/style category stuff appropriately

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -15,7 +15,7 @@
     </ul>
 
     {{#each_category}}
-    <h3 class="category-prompt {{ name }}-prompt"><small class="category-title"><em>{{ title }}</em></small> <br>{{ prompt }}</h3>
+    <h3 class="category-prompt {{ name }}-prompt">{{ prompt }}</h3>
     {{/each_category}}
 
     <p class="vision-description">
