--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -36,7 +36,7 @@
       <a href="#login-to-reply" class="reply-link show-reply"><span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
 
       {{# if category }}
-      <a href="/visions/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-268099-{{ category }}.png" class="icon-inline"></a>
+      <a href="/visions/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong></a>
       {{/ if }}
 
       {{#if_authenticated}}
