--- a/src/visionlouisville/jstemplates/vision-carousel-item-tpl.html
+++ b/src/visionlouisville/jstemplates/vision-carousel-item-tpl.html
@@ -13,7 +13,7 @@
     <h4 class="vision-description"><a href="/visions/{{ id }}" class="undecorated">{{ formattruncated text 140 }}</a></h4>
 
     {{# if category }}
-    <span class="vision-list-category-icon"><strong class="capitalize">{{ category }}</strong><img src="/static/images/category-icon-d5d5c6-{{ category }}.png" class="icon-inline"></span>
+    <span class="vision-list-category-icon"><strong class="capitalize">{{ category }}</strong></span>
     {{/ if }}
 
     <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
