edit about copy, fix bottom of .welcome.site-footer

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -6,29 +6,28 @@
 
   <div class="container-fullwidth welcome site-footer" id="site-footer">
 
-    <h5>What is #VizLou?</h5>
-    <p><strong>#VizLou</strong> is a place to share what you love about Louisville, and your ideas to make it better.</p>
-    <p>All visions shared here will contribute to <a href="http://www.visionlouisville.com/">Vision Louisville</a>, a community process to shape the look, feel and flow of Louisville in the next 25 years. The Vision will help create a strategic framework of major goals and specific projects that will shape the built environment throughout the entire community.</p>
+    <h5>What is #NewarkNext?</h5>
+    <p><strong>#NewarkNext</strong> is a place to share your ideas for making Newark, NJ better. All idea shared here will shared with the City of Newark.</p>
 
-    <h5>Become a Visionary.</h5>
-    <p>Have a great idea for the future of Louisville?
+    <h5>Share your ideas.</h5>
+    <p>Have a great idea for the future of Newark?
 
       {{#if_authenticated}}
-      <a href="/visions/new"><strong>Add it here!</strong></a>
+      <strong>Add it here!</strong>
       {{^}}
       <a href="{{ LOGIN_URL '/visions/new' }}"><strong>Sign in with your Twitter account</strong></a>
       to add it!
       {{/if_authenticated}}
-      Explore visions from others, add comments and hearts to show your support.
+      Explore ideas of others, add comments and hearts to show your support.
     </p>
-    <p>Want to share something you love about Louisville? Tweet with the hashtag <strong>#vizlou</strong> and see what visions you inspire from others.</p>
+    <p>Want to share something you love about Newark? Tweet with the hashtag <strong>#NewarkNext</strong> and see what ideas you inspire from others.</p>
 
     <h5>Allies are listening.</h5>
-    <p>Led by Mayor Greg Fischer, <strong>Allies</strong> are community leaders using #VizLou to hear ideas for the future of Louisville. They're engaging with visionary youth by reading and sharing visions, clicking to show support, and adding comments to help visions become better defined.</p>
-    <p>Are you a community leader? City official? Educator? Pastor? Mentor? <a href="/ally"><strong>Sign up to become an Ally!</strong></a></p>
+    <p><strong>Allies</strong> are community leaders using #NewarkNext to hear ideas for the future of Newark. They're engaging with visionary citizens by reading and sharing ideas, clicking to show support, and adding comments to help ideas become better defined.</p>
+    <p>Are you a community leader? City official? Educator? Pastor? Mentor? <a href="/ally"><strong>Sign up to become a #NewarkNext Ally!</strong></a></p>
 
     <h5>Give us your feedback.</h5>
-    <p>#VizLou is still in beta. Tweet your comments and suggestions to <a href="http://twitter.com/vizlou">@vizlou</a> or email <a href="mailto:hello@vizlou.org">hello@vizlou.org</a>.</p>
+    <p>Tweet your comments and suggestions to <a href="http://twitter.com/NewarkNext">@NewarkNext</a> or email <a href="mailto:hello@newarknext.org">hello@newarknext.org</a>.</p>
 
   </div>
 </div>
