--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -5,9 +5,9 @@
 
   <ul class="unstyled-list question-list">
   {{#each_category}}
-    <li class="clearfix"><a href="/visions/{{name}}/list" class="question">{{ prompt }}</a>
+    <li class="clearfix"><a href="/{{visions_url_name}}/{{name}}/list" class="question">{{ prompt }}</a>
       {{#if_authenticated}}
-      <a class="btn btn-tertiary question-btn" href="/visions/{{name}}/new"><span class="plus">+</span> My Idea</a>
+      <a class="btn btn-tertiary question-btn" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> My Idea</a>
       {{^}}
       <a class="btn btn-tertiary question-btn" href="/login/twitter/"><span class="plus">+</span> My Idea</a>
       {{/if_authenticated}}
