--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -6,7 +6,7 @@
   <ul class="vision-category-list unstyled-list is-current-{{ category }}">
     {{# each_category }}
       <li class="vision-category-{{ name }}">
-        <a href="/visions/{{ name }}/list" class="btn btn-block btn-small" data-noscroll data-replace><span class="">{{ title }}</span></a>
+        <a href="/{{visions_url_name}}/{{ name }}/list" class="btn btn-block btn-small" data-noscroll data-replace><span class="">{{ title }}</span></a>
       </li>
     {{/ each_category }}
   </ul>
@@ -15,9 +15,9 @@
   <h3 class="category-prompt">{{ category_prompt category }}</h3>
 
   {{#if_authenticated}}
-  <a href="/visions/{{ category }}/new" class="btn btn-block btn-primary">Add My Idea</a>
+  <a href="/{{visions_url_name}}/{{ category }}/new" class="btn btn-block btn-primary">Add My Idea</a>
   {{^}}
-  <a href="{{ LOGIN_URL '/' }}visions/{{ category }}/new" class="btn btn-block btn-primary">Sign In and Add My Idea <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
+  <a href="{{ LOGIN_URL '/' }}{{visions_url_name}}/{{ category }}/new" class="btn btn-block btn-primary">Sign In and Add My Idea <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
   {{/if_authenticated}}
 
   {{/ if }}
