--- a/src/visionlouisville/jstemplates/reply-to-vision-item-tpl.html
+++ b/src/visionlouisville/jstemplates/reply-to-vision-item-tpl.html
@@ -1,1 +1,1 @@
-<span class="bio-reply-author nobreak">{{ author_details.full_name }}'s</span> vision: <strong><a href="/visions/{{ id }}">{{ formattruncated text 35 }}</a></strong>
+<span class="bio-reply-author nobreak">{{ author_details.full_name }}'s</span> vision: <strong><a href="/{{visions_url_name}}/{{ id }}">{{ formattruncated text 35 }}</a></strong>
