--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -20,7 +20,7 @@
       <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}}"><img class="heart" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></a>
 
       {{^ if_authenticated}}
-      <div class="support-login-prompt is-hidden"><a href="{{ LOGIN_URL }}" class="btn btn-secondary btn-small">Sign in to support this vision! <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a></div>
+      <div class="support-login-prompt is-hidden"><a href="{{ LOGIN_URL }}" class="btn btn-secondary btn-small">Sign in to support this idea! <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a></div>
       {{/if_authenticated}}
 
     </header>
