hide single-word categories on visions, add in-response-to link below vision content

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -27,12 +27,16 @@
 
     <p class="vision-description">{{ formattext text }}</p>
 
+    {{# if category }}
+    <p class="in-response-to"><span>In response to:</span> <a href="/{{visions_url_name}}/{{ category }}/list">{{ category_prompt category }}</a></p>
+    {{/ if }}
+
     <footer class="vision-footer clearfix">
       <a href="#" class="retweet-link{{#if_shared}} retweeted{{/if_shared}}"><span class="tweet-icon"><img class="tweet-icon-retweet" src="/static/images/retweet-icon.png"></span> Retweet</a>
       <a href="#login-to-reply" class="reply-link show-reply"><span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
 
       {{# if category }}
-      <a href="/{{visions_url_name}}/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong></a>
+      <!-- <a href="/{{visions_url_name}}/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong></a> -->
       {{/ if }}
 
       {{#if_authenticated}}
