--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -16,7 +16,7 @@
   {{/ if }}
 
   {{# if category }}
-  <span class="vision-list-category-icon"><strong class="capitalize">{{ category }}</strong></span>
+  <!-- <span class="vision-list-category-icon"><strong class="capitalize">{{ category }}</strong></span> -->
   {{/ if }}
 
   <span class="support supported"><img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></span>
