--- a/src/visionlouisville/jstemplates/ally-signup-tpl.html
+++ b/src/visionlouisville/jstemplates/ally-signup-tpl.html
@@ -5,11 +5,11 @@
     <p><strong>Thank you!</strong> Promote the tool and use it to engage with youth. Allies like you can empower citizens by engaging, sharing and supporting their ideas. Your comments and suggestions help develop and encourage ideas. Thanks for your time!
     </p>
 
-    <a href="/" class="btn btn-block btn-primary">Return to NewarkNext</a>
+    <a href="/" class="btn btn-block btn-primary">Return to #ConnectNewark</a>
   {{^}}
     <h2>Become an Ally!</h2>
 
-    <h5>#NewarkNext is a website for people to share their ideas for the future of Newark, NJ.</h5>
+    <h5>#ConnectNewark is a website for people to share their ideas for the future of Newark, NJ.</h5>
 
     <p><strong>Your participation is vital!</strong> Allies like you can empower citizens by engaging, sharing and supporting ideas, and promoting the tool. Your comments and suggestions help develop and encourage ideas. Thanks for your time!
     </p>
@@ -35,15 +35,15 @@
   {{/ if_in_group }}
 
   <h5>Two ways to engage</h5>
-  <p>Allies help get the conversation started by sharing inspirations, and they comment, heart and share ideas. Check NewarkNext frequently to see the latest.</p>
+  <p>Allies help get the conversation started by sharing inspirations, and they comment, heart and share ideas. Check #ConnectNewark frequently to see the latest.</p>
 
   <h6>Share inspirations</h6>
 
   <p>What can you inspire? Tweet a positive story about Newark:<br/>
-  <em>Grilling and chilling on my block. That's why I love Newark! #NewarkNext</em></p>
-  <p>Include a pic! Use the #NewarkNext hashtag. It will show up here, where others can respond to it.</p>
+  <em>Grilling and chilling on my block. That's why I love Newark! #ConnectNewark</em></p>
+  <p>Include a pic! Use the #ConnectNewark hashtag. It will show up here, where others can respond to it.</p>
 
-  <h6>Explore ideas at NewarkNext.org</h6>
+  <h6>Explore ideas at connect.ci.newark.nj.us</h6>
   <p>Engage with citizens:</p>
   <ul>
   <li>Read ideas.</li>
@@ -52,6 +52,4 @@
   <li>Comment to help ideas become better defined.</li>
   </ul>
 
-  <h5>Questions?</h5>
-  <p>Contact <a href="mailto:hello@vizlou.org">hello@newarknext.org</a> if you have questions</p>
 </div>
