--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -6,8 +6,8 @@
 
   <div class="container-fullwidth welcome site-footer" id="site-footer">
 
-    <h5>What is #NewarkNext?</h5>
-    <p><strong>#NewarkNext</strong> is a place to share your ideas for making Newark, NJ better. All idea shared here will shared with the City of Newark.</p>
+    <h5>What is #ConnectNewark?</h5>
+    <p><strong>#ConnectNewark</strong> is a place to share your ideas for making Newark, NJ better. All idea shared here will shared with the City of Newark.</p>
 
     <h5>Share your ideas.</h5>
     <p>Have a great idea for the future of Newark?
@@ -20,14 +20,14 @@
       {{/if_authenticated}}
       Explore ideas of others, add comments and hearts to show your support.
     </p>
-    <p>Want to share something you love about Newark? Tweet with the hashtag <strong>#NewarkNext</strong> and see what ideas you inspire from others.</p>
+    <p>Want to share something you love about Newark? Tweet with the hashtag <strong>#ConnectNewark</strong> and see what ideas you inspire from others.</p>
 
     <h5>Allies are listening.</h5>
-    <p><strong>Allies</strong> are community leaders using #NewarkNext to hear ideas for the future of Newark. They're engaging with visionary citizens by reading and sharing ideas, clicking to show support, and adding comments to help ideas become better defined.</p>
-    <p>Are you a community leader? City official? Educator? Pastor? Mentor? <a href="/ally"><strong>Sign up to become a #NewarkNext Ally!</strong></a></p>
+    <p><strong>Allies</strong> are community leaders using #ConnectNewark to hear ideas for the future of Newark. They're engaging with visionary citizens by reading and sharing ideas, clicking to show support, and adding comments to help ideas become better defined.</p>
+    <p>Are you a community leader? City official? Educator? Pastor? Mentor? <a href="/ally"><strong>Sign up to become a #ConnectNewark Ally!</strong></a></p>
 
     <h5>Give us your feedback.</h5>
-    <p>Tweet your comments and suggestions to <a href="http://twitter.com/NewarkNext">@NewarkNext</a> or email <a href="mailto:hello@newarknext.org">hello@newarknext.org</a>.</p>
+    <p>Tweet your comments and suggestions to <a href="http://twitter.com/ConnectNewark">@ConnectNewark</a>.</p>
 
   </div>
 </div>
