--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -9,22 +9,24 @@
 
         {{#each_category}}
 
-        <div class="swiper-vision-container">
+          <div class="swiper-slide">
 
-          <img class="slide-image" src="http://distilleryimage3.ak.instagram.com/fe944c563f6911e3894e22000aaa05f3_8.jpg" width="640" height="640"><!-- FIXME TODO :: config these images -->
+            <div class="swiper-vision-container">
+            <img class="slide-image" src="http://distilleryimage3.ak.instagram.com/fe944c563f6911e3894e22000aaa05f3_8.jpg" width="640" height="640"><!-- FIXME TODO :: config these images -->
 
-          <div class="slide-header">
-            <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}/list">{{ prompt }}</a></h1>
-            <div class="slide-meta">
-              <span class="slide-stat"><strong class="ideas-count">427</strong> Ideas</span>
-              <span class="slide-stat"><strong class="favorites-count">1,960</strong> Favorites</span>
-              <span class="slide-stat"><strong class="comments-count">847</strong> Comments</span>
+            <div class="slide-header">
+              <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}/list">{{ prompt }}</a></h1>
+              <div class="slide-meta">
+                <span class="slide-stat"><strong class="ideas-count">427</strong> Ideas</span>
+                <span class="slide-stat"><strong class="favorites-count">1,960</strong> Favorites</span>
+                <span class="slide-stat"><strong class="comments-count">847</strong> Comments</span>
+              </div>
+              {{#if_authenticated}}
+              <a class="btn btn-tertiary" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
+              {{^}}
+              <a class="btn btn-tertiary" href="/login/twitter/"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
+              {{/if_authenticated}}
             </div>
-            {{#if_authenticated}}
-            <a class="btn btn-tertiary" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
-            {{^}}
-            <a class="btn btn-tertiary" href="/login/twitter/"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
-            {{/if_authenticated}}
           </div>
 
         </div>
