style swiper navigation

--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -34,8 +34,10 @@
         {{/each_category}}
 
       </div>
+      <div class="pagination"></div>
+      <a class="pagination-btn pagination-btn-prev" href="#">&#12296;</a>
+      <a class="pagination-btn pagination-btn-next" href="#">&#12297;</a>
     </div>
-    <div class="pagination"></div>
   </div>
 
 </div>
