Add an image field to the category model - Serialize the image field as an absolute url - Update the template to use the image url value - Add a migration

--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -12,7 +12,7 @@
           <div class="swiper-slide">
 
             <div class="swiper-vision-container">
-            <img class="slide-image" src="http://distilleryimage3.ak.instagram.com/fe944c563f6911e3894e22000aaa05f3_8.jpg" width="640" height="640"><!-- FIXME TODO :: config these images -->
+            <img class="slide-image" src="{{ image }}" width="640" height="640"><!-- FIXME TODO :: config these images -->
 
             <div class="slide-header">
               <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}/list">{{ prompt }}</a></h1>
