Fill in the vision, reply, and support counts for each category on the home screen - Add appropriate count fields in the category serializer - Add an if_plural block helper

--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -18,14 +18,14 @@
             <div class="slide-header">
               <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}/list">{{ prompt }}</a></h1>
               <div class="slide-meta">
-                <span class="slide-stat"><strong class="ideas-count">427</strong> Ideas</span>
-                <span class="slide-stat"><strong class="favorites-count">1,960</strong> Favorites</span>
-                <span class="slide-stat"><strong class="comments-count">847</strong> Comments</span>
+                {{#if vision_count}}<span class="slide-stat"><strong class="ideas-count">{{ vision_count }}</strong> {{#if_plural vision_count}}{{app_config 'vision_plural' true}}{{^}}{{app_config 'vision' true}}{{/if_plural}}</span>{{/if}}
+                {{#if support_count}}<span class="slide-stat"><strong class="favorites-count">{{ support_count }}</strong>{{#if_plural vision_count}}Favorites{{^}}Favorite{{/if_plural}}</span>{{/if}}
+                {{#if reply_count}}<span class="slide-stat"><strong class="comments-count">{{ reply_count }}</strong> {{#if_plural vision_count}}Comments{{^}}Comment{{/if_plural}}</span>{{/if}}
               </div>
               {{#if_authenticated}}
               <a class="btn btn-tertiary" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
               {{^}}
-              <a class="btn btn-tertiary" href="/login/twitter/"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
+              <a class="btn btn-tertiary" href="/login/twitter/?next=/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
               {{/if_authenticated}}
             </div>
           </div>
