--- a/src/visionlouisville/jstemplates/support-summary-tpl.html
+++ b/src/visionlouisville/jstemplates/support-summary-tpl.html
@@ -1,2 +1,4 @@
-<p class="support{{#if_supported}} supported{{/if_supported}}"><img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
-  {{pluralize supporters.length 'Supporter' 'Supporters'}}</p>
+<a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}} hint--right"
+{{^ if_authenticated}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_authenticated}}>
+<img class="heart heart-inline" src="/static/images/heart-beige.png"> <span class="support-count visionary-support-count">{{ supporters.length }}</span>
+{{pluralize supporters.length 'Supporter' 'Supporters'}}</a>
