Remove a few missed instances of hardcoded 'Ideas' and replace with values from the app config

--- a/src/visionlouisville/jstemplates/user-list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-item-tpl.html
@@ -8,7 +8,7 @@
     </span>
     <span class="user-meta">
       {{#if visions.length}}
-      <span class="user-count user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Idea' 'Ideas'}}</span>
+      <span class="user-count user-vision-count nobreak">{{ visions.length }} {{#eq visions.length 1}} {{app_config "vision" true}} {{^}} {{app_config "vision_plural" true}} {{/eq}}</span>
       {{/if}}
 
       {{#if supported.length}}
