--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -24,4 +24,6 @@
 
   <img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></a>
 
+  <span>{{replies.length}} {{pluralize replies.length 'Reply' 'Replies'}}</span>
+
 </article><!-- end .vision -->
