--- a/src/visionlouisville/jstemplates/notification-list-tpl.html
+++ b/src/visionlouisville/jstemplates/notification-list-tpl.html
@@ -1,3 +1,4 @@
-Notifications
-
-<ul></ul>
+<div class="container">
+  <h3>Notifications</h3>
+  <ul class="notifications-list unstyled-list"></ul>
+</div>
