--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -23,11 +23,16 @@
     <li class="vision-meta-item">
       <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}} hint--right"
       {{^ if_authenticated}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_authenticated}}>
-      <img class="heart heart-inline" src="/static/images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></a>
+      <img class="heart heart-inline" src="/static/images/heart.png">
+      <span class="support-count total-support-count">
+        {{#eq supporters.length 0}} Support this! {{^}} {{ supporters.length }} {{/eq}}
+      </span></a>
     </li>
+    {{^eq replies.length 0 }}
     <li class="vision-meta-item">
       <a href="/{{visions_url_name}}/{{ id }}" class="replies-count">{{replies.length}} {{pluralize replies.length 'Reply' 'Replies'}}</a>
     </li>
+    {{/eq}}
   </ul>
 
 </article><!-- end .vision -->
