Make the ally and visionary labels on the home page configurable - Add fields to the app config model - Extend the app_config helper to be used as either a block or inline helper - Modify the home ally and visionary templates to use the app config setting, if available

--- a/src/visionlouisville/jstemplates/home-visionaries-tpl.html
+++ b/src/visionlouisville/jstemplates/home-visionaries-tpl.html
@@ -1,3 +1,9 @@
-  <h5>We're sharing our {{app_config 'vision_plural'}}!</h5>
+  <h5>
+    {{#app_config 'visionaries_label'}}
+      {{.}}
+    {{^}}
+      We're sharing our {{app_config 'vision_plural'}}!
+    {{/app_config}}
+  </h5>
   <ul class="user-list visionaries-list unstyled-list clearfix"></ul>
   <a href="/users/list/visionaries" class="btn btn-block">See Everyone</a>
