--- a/src/visionlouisville/jstemplates/home-allies-tpl.html
+++ b/src/visionlouisville/jstemplates/home-allies-tpl.html
@@ -1,3 +1,9 @@
-  <h5>We are {{app_config 'ally_plural'}} in your effort to make {{app_config 'city'}} a better place for young people.</h5>
+  <h5>
+    {{#app_config 'allies_label'}}
+      {{.}}
+    {{^}}
+      We are {{app_config 'ally_plural'}} in your effort to make {{app_config 'city'}} a better place for young people.
+    {{/app_config}}
+  </h5>
   <ul class="user-list allies-list unstyled-list clearfix"></ul>
   <a href="/users/list/allies" class="btn btn-block">See all {{app_config 'ally_plural'}}</a>
