Change the label on the 'Tweet this' toggle button

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -33,7 +33,7 @@
     {{/ if_imagemanip_feature }}
 
     <p class="vision-tweet">
-      <label class="on-off-switch-label" for="x-send-to-twitter"><input id="x-send-to-twitter" type="checkbox" checked data-placement="header" name="x-send-to-twitter" class="on-off-switch is-visuallyhidden"><span class="on-off-switch-icon"><img src="/static/images/on-off-switch.png"></span> Tweet This</label>
+      <label class="on-off-switch-label" for="x-send-to-twitter"><input id="x-send-to-twitter" type="checkbox" checked data-placement="header" name="x-send-to-twitter" class="on-off-switch is-visuallyhidden"><span class="on-off-switch-icon"><img src="/static/images/on-off-switch.png"></span> Tweet from my account (@{{current_user 'username'}})</label>
     </p>
 
     <p class="vision-save-action">
