Feature the first active category on the home page and include its visions - Add vision region to the home page - Update routes to get the active category at root - Add a JS object of vision collections keyed by category and update controller logic to show views - Remove unused function from VisionCollection - Remove *most* Swiper logic from the vision list view (still needs styled updates to be fully removed) - Remove category selector from the vision list view - Update templates (links, etc)

--- a/src/hatch/jstemplates/home-tpl.html
+++ b/src/hatch/jstemplates/home-tpl.html
@@ -1,6 +1,7 @@
 <div class="container home">
   {{> welcome-tpl }}
 
+  <div class="visions-region"></div>
   <div class="visionaries-region"></div>
   <div class="allies-region"></div>
 
